--- a/templates/Main.html
+++ b/templates/Main.html
@@ -8,5 +8,10 @@
 </head>
 <body>
     <h1>Menu:</h1>
+    <form action="/base"/>
+    <p>
+    <input type="submit" value="Calculator">
+    </p>
+    </form>
 </body>
 </html>
