--- a/templates/Calculator.html
+++ b/templates/Calculator.html
@@ -8,8 +8,9 @@
     <title>Calculator</title>
 </head>
 <body>
-<form action="/send" method="POST" >
+<form action="/base" method="POST" >
     {% block body %}{% endblock %}
+{% block number %}{% endblock %}
 </form>
 </body>
 </html>
